header in het engels

--- a/view/partials/header.ejs
+++ b/view/partials/header.ejs
@@ -4,17 +4,17 @@
         <ul>
             <a href="/favorites">
                 <li>
-                    <img src="../static/images/icons/liken.svg">Opgeslagen
+                    <img src="../static/images/icons/liken.svg">Saved pets
                 </li>
             </a>
             <a href="/post">
                 <li>
-                    <img src="../static/images/icons/delen.svg">voeg dier toe
+                    <img src="../static/images/icons/delen.svg">add pet
                 </li>
             </a>
             <a href="/profile">
                 <li>
-                    <img src="../static/images/icons/profiel.svg">mijn profiel
+                    <img src="../static/images/icons/profiel.svg">my profile
                 </li>
             </a>
         </ul>
