password weggehaald en engels getranslate

--- a/view/profile.ejs
+++ b/view/profile.ejs
@@ -20,10 +20,7 @@
                 <label for="id">E-mail</label>
                 <input  type="mail" id="id" name="email" value="<%= data.email %>">
 
-                <label for="id">password</label>
-                <input  type="password" id="id" name="wachtwoord" value="<%= data.password %>">
-
-                <input type="submit" value="bewerken opslaan">
+                <input type="submit" value="save changes">
             </form>
         </div>
         <a href="/profile/logout">Log out</a>
