--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -74,6 +74,8 @@ form {
 .comment-form {
 
     textarea {
+        padding: .5em;
+        font-size: 1em;
         margin-bottom: 1em;
         width: 100%;
         resize: none;
