--- a/view/liked.ejs
+++ b/view/liked.ejs
@@ -7,7 +7,7 @@
 <%- include ('../view/partials/header') %>
 
 <main>
-    <h2><%= favoritePetLiked %></h2>
+    <h2 class="favoriteLikedText"><%= favoritePetLiked %></h2>
 </main>
 </body>
 </html>
