--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -46,7 +46,7 @@ main {
     margin: auto;
 }
 
-@import 'header', 'forms', 'comment', 'result-list', 'result-page', 'error';
+@import 'header', 'forms', 'comment', 'result-list', 'result-page', 'error', 'favorites';
 
 
 section:nth-of-type(1) {
@@ -128,17 +128,18 @@ main button:hover {
 }
 
 .results {
-    background-color: white;
+    background-color: var(--background-color);
     width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: auto;
-    margin-top: 5em;
+    margin-top: 1em;
     padding: 2em;
 }
 
 .info {
+    background-color: white;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100%;
