--- a/view/register.ejs
+++ b/view/register.ejs
@@ -24,6 +24,7 @@
 
                 <input type="submit" value="register">
             </form>
+            <p>Do you already have an account?<a href="/login"><b> Log in</b></a></p>
         </div>
     </main>
 </body>
