--- a/view/index.ejs
+++ b/view/index.ejs
@@ -5,7 +5,7 @@
 <body>
 <%- include ('../view/partials/header') %>
 
-<main>
+<main class="index">
 	<form action="result" method="post">
 
 		<section>
