--- a/view/login.ejs
+++ b/view/login.ejs
@@ -12,15 +12,15 @@
                 <h2>Proceed by logging in</h2>
             </section>
             <form method="post" action="/login/submit">
-                <label for="id">E-mail</label>
-                <input required type="mail" value="" id="id" name="email" placeholder="Fill in you email here">
+                <label for="mail">E-mail</label>
+                <input required type="mail" id="mail" name="mail" placeholder="Fill in you email here">
 
-                <label for="id">password</label>
-                <input required type="password" value="" id="id" name="wachtwoord" placeholder="Fill in you password here">
+                <label for="password">password</label>
+                <input required type="password" id="password" name="password" placeholder="Fill in you password here">
 
                 <input type="submit" value="login">
             </form>
-            <p>Dont have an account yet?<a href="/register"><b> Create one here</b></a></p>
+            <p>Dont have an account yet?<a href="/register">Create one here</a></p>
         </div>
     </main>
 </body>
