--- a/view/profile.ejs
+++ b/view/profile.ejs
@@ -14,10 +14,10 @@
                 <img src="../static/images/dog1.jpg">
             </div>
             <form method="post" action="/profile/submit">
-                <label for="id">username</label>
+                <label for="username">username</label>
                 <input  type="text" id="id" name="username" value="<%= data.username %>">
 
-                <label for="id">E-mail</label>
+                <label for="email">E-mail</label>
                 <input  type="mail" id="id" name="email" value="<%= data.email %>">
 
                 <input type="submit" value="save changes">
