--- a/view/error.ejs
+++ b/view/error.ejs
@@ -8,8 +8,8 @@
     <main class="errorpage">
         <h1>User already exists</h1>
         <div>
-            <a href="/register" class="errorbutton"><b>Try again</b></a>
-            <a href="/login" class="errorbutton"><b>Go to log in page</b></a>
+            <a href="/register" class="errorbutton">Try again</a>
+            <a href="/login" class="errorbutton">Go to log in page</a>
         </div>
     </main>
 </body>
