--- a/view/register.ejs
+++ b/view/register.ejs
@@ -13,18 +13,18 @@
                 <h2>MAKE YOUR ACCOUNT</h2>
             </section>
             <form method="post" action="/register/submit">
-                <label for="id">username</label>
-                <input required type="text" value="" id="id" name="username" placeholder="Fill in your username here">
+                <label for="username">username</label>
+                <input required type="text" id="username" name="username" placeholder="Fill in your username here">
 
-                <label for="id">e-mail</label>
-                <input required type="mail" value="" id="id" name="email" placeholder="Fill in your mail here">
+                <label for="email">e-mail</label>
+                <input required type="mail" id="email" name="email" placeholder="Fill in your mail here">
 
-                <label for="id">password</label>
-                <input required type="password" value="" id="id" name="wachtwoord" placeholder="Fill in your password here">
+                <label for="password">password</label>
+                <input required type="password" id="password" name="wachtwoord" placeholder="Fill in your password here">
 
                 <input type="submit" value="register">
             </form>
-            <p>Do you already have an account?<a href="/login"><b> Log in</b></a></p>
+            <p>Do you already have an account?<a href="/login"> Log in</a></p>
         </div>
     </main>
 </body>
