--- a/view/profile.ejs
+++ b/view/profile.ejs
@@ -15,10 +15,10 @@
             </div>
             <form method="post" action="/profile/submit">
                 <label for="username">username</label>
-                <input  type="text" id="id" name="username" value="<%= data.username %>">
+                <input  type="text" id="username" name="username" value="<%= data.username %>">
 
                 <label for="email">E-mail</label>
-                <input  type="mail" id="id" name="email" value="<%= data.email %>">
+                <input  type="mail" id="email" name="email" value="<%= data.email %>">
 
                 <input type="submit" value="save changes">
             </form>
