--- a/view/postform.ejs
+++ b/view/postform.ejs
@@ -6,15 +6,17 @@
 <%- include ('../view/partials/header') %>
 
     <main>
-        <div>
-            <section>
-                <h1>Post an animal</h1>
-            </section>
-                <form action="/post/submit" method="post" enctype="multipart/form-data" class="post-form">
+        <div class="uploadform">
+            <form action="/post/submit" method="post" enctype="multipart/form-data" class="post-form">
+
+                <section>
+                    <h1>Post an animal</h1>
+                </section>
                     
                     <label for="name">Animal Name</label>
-                    <input type="text" name="name" id="name" required>
+                    <input type="text" name="name" id="name" required placeholder="Add the name of your animal">
 
+                    <label for="images">Images</label>
                     <div class="file-input">
                         <div class="image-list"></div>
                         <input type="file" name="images" id="images" multiple accept="image/*" required>
@@ -36,9 +38,20 @@
                     </select>
 
                     <label>Traits</label>
-                    <input type="checkbox" name="trait" value="inquisitive" id="inquisitive"><label for="inquisitive">inquisitive</label>
-                    <input type="checkbox" name="trait" value="playful" id="playful"><label for="playful">playful</label>
-                    <input type="checkbox" name="trait" value="friendly" id="friendly"><label for="friendly">friendly</label>
+                    <ul>
+                        <li class="checkbox-container">
+                            <input type="checkbox" name="trait" value="inquisitive" id="inquisitive">
+                            <label for="inquisitive">inquisitive</label>
+                        </li>
+                        <li class="checkbox-container">
+                            <input type="checkbox" name="trait" value="playful" id="playful">
+                            <label for="playful">playful</label>
+                        </li>
+                        <li class="checkbox-container">
+                            <input type="checkbox" name="trait" value="friendly" id="friendly">
+                            <label for="friendly">friendly</label>
+                        </li>
+                    </ul>
 
                     <button type="submit" id="submit">submit</button>
 
