--- a/view/favorites.ejs
+++ b/view/favorites.ejs
@@ -8,12 +8,14 @@
 
 <!-- het dier wordt weergegevn wat er bij past -->
 <main>
-    <div class="results">
     <% if (favorites < 1) { %>
-        <h2>No favorites have been added yet! Click the button below to add favorites</h2>
+        <h2 class="zerostateFavoritesText">No pets have been saved yet! Click the button below to add favorites</h2>
     <% } else { %>
+        <h2 class="zerostateFavoritesText">Here are your saved pets!</h2>
+    <% } %>
+    <div class="results">
         <% favorites.forEach((favorite) => { %>
-            <div class="info"><img class="petpicture" src=" <%= favorite.photo %>" alt="photo of a pet" />
+            <div class="info"><img class="petpicture" src=" <%= favorite.images[0] %>" alt="photo of a pet" />
                <div><h2><%= favorite.name %></h2>
                     <h2><%= favorite.age %></h2>
                     <h2><%= favorite.soort %></h2>
@@ -21,12 +23,12 @@
                     <form class="favoriteForm" method="post" action="/removelike">
                         <input type="hidden" name="favoritename" value="<%= favorite.name %>">
                         <button class="unlikeBtn" name="favorite" type="submit" value="<%= favorite._id %>">Remove</button>
+                        <a href="/result/<%= favorite._id %>">More info</a>
                     </form>
                 </div>
             </div>
         <% }) %>
-    <% } %>
-    <a href="http://localhost:4000/"><button>Add favorites</button></a>
+        <a href="http://localhost:4000/"><button>Add favorites</button></a>
     </div>
     </main>
 
