--- a/view/single-animal.ejs
+++ b/view/single-animal.ejs
@@ -7,24 +7,27 @@
 <%- include ('../view/partials/header') %>
 
 <main>
-    <h2><%= resultPet.name %></h2>
-    <h2><%= resultPet.age %></h2>
-    <h2><%= resultPet.species %></h2>
-    <h2><%= resultPet.trait %></h2>
+    <h2 class="single-pet-heading"><%= resultPet.name %></h2>
+    <ul class="single-pet-ul">
+      <li class="single-pet-picture"></li>
+          <% resultPet.images.forEach(image => { %>
+          <img src="../<%= image %>" alt="photo of a pet" /> 
+          <% }) %>
+      </li>
+    </ul>
    
-   
-    <form method="post" action="/result/postcomment">
+    <form class="comment-form" method="post" action="/result/postcomment">
         <label for="comment">Comment</label>
-        <textarea name="comment" id="comment" cols="10" rows="5" placeholder="Leave a comment!"></textarea>
+        <textarea name="comment" id="comment" rows="2" placeholder="Leave a comment!"></textarea>
         <button type="submit">submit comment</button>
         <input type="hidden" name="petId" value="<%= resultPet._id %>">
     </form>
 
     <% sortedComments.forEach((comment) => { %>
         <div class="comment">
-            <p><%= comment.username %></p>
+            <h2><%= comment.username %></h2>
+            <p><%= timeSince(new Date(comment.date)) + " ago" %></p>
             <p><%= comment.comment %></p>
-            <p>
                 <!-- bron: https://stackoverflow.com/questions/3177836/how-to-format-time-since-xxx-e-g-4-minutes-ago-similar-to-stack-exchange-site -->
                 <%
                 function timeSince(date) {
@@ -56,8 +59,6 @@
                   }
                   var aDay = 24*60*60*1000;
                 %>
-                <%= timeSince(new Date(comment.date)) + " ago" %>
-            </p>
         </div>
       <% }) %>
 
