--- a/sass/_favorites.scss
+++ b/sass/_favorites.scss
@@ -1,15 +1,15 @@
-//favorites.ejs page
 .zerostateFavoritesText {
-    font-size: 16px;
+    margin: .5em 0 0 0;
+
+    font-size: 1em;
     text-align: center;
-    margin-top: 0.5em;
-    margin-bottom: 0;
 }
 
 //liked.ejs page
 .favoriteLikedText {
-    font-size: 24px;
-    text-align: center;
     margin-top: 2em;
-    border-bottom: 4px solid var(--accent-color);
+    border-bottom: .25em solid var(--accent-color);
+
+    font-size: 1.25em;
+    text-align: center;
 }
