--- a/sass/_result-list.scss
+++ b/sass/_result-list.scss
@@ -3,40 +3,46 @@
 }
 
 .results {
-    background-color: var(--background-color);
+    margin: 1em auto;
+    padding: 2em;
     width: 80%;
+
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: auto;
-    margin-top: 1em;
-    padding: 2em;
+
+    background-color: var(--background-color);
 }
 
 .info {
-    background-color: white;
+    margin-bottom: 2em;
+    border: 0.5em solid var(--header-color);
+    width: 100%;
+
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100%;
-    width: 100%;
     align-items: center;
-    border: 0.5em solid var(--header-color);
-    margin-bottom: 2em;
+
+    background-color: #ffffff;
 
     h2:last-of-type{
         margin-bottom: 0.5em;
     }
 
     a {
-        text-decoration: none;
-        color: white;
+        padding: .5em 1.5em;
         border: none;
         border-radius: 3em;
-        padding: .5em 1.5em;
-        background-color: var(--accent-color);
+
         font-family: 'Recky', sans-serif;
-        cursor: pointer;
         font-size: 1.2em;
+
+        background-color: var(--accent-color);
+        text-decoration: none;
+        color: #ffffff;
+
+        cursor: pointer;
     }
 
     a:hover {
