a:visited en kleur gefixt

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -20,9 +20,10 @@
 
 a {
     text-decoration: none;
-    a:visited {
-        color: white;
-    }
+}
+
+a:visited {
+    color: #ffffff;
 }
 
 h1,
