lazy loading toevoegen

--- a/sass/_result-list.scss
+++ b/sass/_result-list.scss
@@ -48,6 +48,11 @@
     a:hover {
         background-color: var(--accent-color-hover);
     }
+
+    img {
+        width: 300px;
+        height: 300px;
+    }
 }
 
 .favoriteForm {
