--- a/sass/_error.scss
+++ b/sass/_error.scss
@@ -1,4 +1,4 @@
-.errorpage {
+.errorPage {
     margin-top: 5em;
 
     display: flex;
@@ -7,7 +7,7 @@
     gap: 1em;
 }
 
-.errorbutton {
+.errorButton {
     padding: 0.5em;
     border: 0.1em solid var(--accent-color);
     border-radius: 1em;
