--- a/sass/_login.scss
+++ b/sass/_login.scss
@@ -6,7 +6,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        
+
         background-image: url(../static/images/katbg.png);
         background-position: left top;
         background-repeat: no-repeat;
@@ -24,7 +24,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        
+
         background-image: url(../static/images/dogbg1.jpg);
         background-position: right bottom;
         background-repeat: no-repeat;
@@ -45,21 +45,21 @@
     main div:first-of-type section {
         display: flex;
         flex-direction: column;
-        align-items: center; 
+        align-items: center;
     }
 
-    main div:first-of-type section>h1 {
+    main div:first-of-type section > h1 {
         font-size: 3.3em;
 
         color: #e0815e;
     }
 
-    main div:first-of-type section>h2 {
+    main div:first-of-type section > h2 {
         margin-bottom: 1em;
 
-        font-family: "Recky", sans-serif;
+        font-family: 'Recky', sans-serif;
         font-size: 2.8em;
-        
+
         color: #ffffff;
     }
 
@@ -72,7 +72,7 @@
     }
 
     main div:first-of-type p,
-    main div:first-of-type p>a {
+    main div:first-of-type p > a {
         font-family: var(--font-family);
     }
 }
