--- a/sass/_result-list.scss
+++ b/sass/_result-list.scss
@@ -1,4 +1,4 @@
-.petpicture {
+.petPicture {
     width: 60%;
 }
 
@@ -26,12 +26,12 @@
 
     background-color: #ffffff;
 
-    h2:last-of-type{
+    h2:last-of-type {
         margin-bottom: 0.5em;
     }
 
     a {
-        padding: .5em 1.5em;
+        padding: 0.5em 1.5em;
         border: none;
         border-radius: 3em;
 
@@ -58,5 +58,5 @@
 .favoriteForm {
     display: flex;
     flex-direction: row;
-    gap: .2em;
+    gap: 0.2em;
 }
