--- a/sass/_result-page.scss
+++ b/sass/_result-page.scss
@@ -1,5 +1,5 @@
-.single-pet-heading {
-    margin: .3em 0 .3em 0;
+.singlePetHeading {
+    margin: 0.3em 0 0.3em 0;
 
     font-family: Recky;
     font-size: 5em;
@@ -9,17 +9,17 @@
     color: var(--accent-color);
 }
 
-.single-pet-ul {
+.singlePetUl {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: center;
 
     img {
-        margin: 0 .5em 0 .5em;
-        border-radius: .5em;
+        margin: 0 0.5em 0 0.5em;
+        border-radius: 0.5em;
         width: 20em;
         height: 100%;
-        box-shadow: .3em .3em .8em #0001;
+        box-shadow: 0.3em 0.3em 0.8em #0001;
     }
 }
