--- a/view/postform.ejs
+++ b/view/postform.ejs
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include ('../view/partials/head') %>
+    <%- include ('../view/partials/head') %>
 
-<body>
-<%- include ('../view/partials/header') %>
+    <body>
+        <%- include ('../view/partials/header') %>
 
-    <main>
-        <div class="uploadform">
-            <form action="/post/submit" method="post" enctype="multipart/form-data" class="post-form">
+        <main>
+            <div class="uploadform">
+                <form
+                    action="/post/submit"
+                    method="post"
+                    enctype="multipart/form-data"
+                    class="postForm"
+                >
+                    <section>
+                        <h1>Post an animal</h1>
+                    </section>
 
-                <section>
-                    <h1>Post an animal</h1>
-                </section>
-                    
                     <label for="name">Animal Name</label>
-                    <input type="text" name="name" id="name" required placeholder="Add the name of your animal">
+                    <input
+                        type="text"
+                        name="name"
+                        id="name"
+                        required
+                        placeholder="Add the name of your animal"
+                    />
 
                     <label for="images">Images</label>
-                    <div class="file-input">
+                    <div class="fileInput">
                         <div class="image-list"></div>
-                        <input type="file" name="images" id="images" multiple accept="image/*" required>
+                        <input
+                            type="file"
+                            name="images"
+                            id="images"
+                            multiple
+                            accept="image/*"
+                            required
+                        />
                     </div>
 
                     <label for="age">Animal Age</label>
@@ -40,26 +57,39 @@
                     <label>Traits</label>
                     <ul>
                         <li class="checkbox-container">
-                            <input type="checkbox" name="trait" value="inquisitive" id="inquisitive">
+                            <input
+                                type="checkbox"
+                                name="trait"
+                                value="inquisitive"
+                                id="inquisitive"
+                            />
                             <label for="inquisitive">inquisitive</label>
                         </li>
                         <li class="checkbox-container">
-                            <input type="checkbox" name="trait" value="playful" id="playful">
+                            <input
+                                type="checkbox"
+                                name="trait"
+                                value="playful"
+                                id="playful"
+                            />
                             <label for="playful">playful</label>
                         </li>
                         <li class="checkbox-container">
-                            <input type="checkbox" name="trait" value="friendly" id="friendly">
+                            <input
+                                type="checkbox"
+                                name="trait"
+                                value="friendly"
+                                id="friendly"
+                            />
                             <label for="friendly">friendly</label>
                         </li>
                     </ul>
 
                     <button type="submit" id="submit">submit</button>
-
                 </form>
             </div>
-    </main>
+        </main>
 
-    <script src="/static/postform.js"></script>
-
-</body>
+        <script src="/static/postform.js"></script>
+    </body>
 </html>
