--- a/view/partials/header.ejs
+++ b/view/partials/header.ejs
@@ -4,17 +4,15 @@
         <ul>
             <a href="/favorites">
                 <li>
-                    <img src="../static/images/icons/liken.svg">Saved pets
+                    <img src="../static/images/icons/liken.svg" />Saved pets
                 </li>
             </a>
             <a href="/post">
-                <li>
-                    <img src="../static/images/icons/delen.svg">add pet
-                </li>
+                <li><img src="../static/images/icons/delen.svg" />add pet</li>
             </a>
             <a href="/profile">
                 <li>
-                    <img src="../static/images/icons/profiel.svg">my profile
+                    <img src="../static/images/icons/profiel.svg" />my profile
                 </li>
             </a>
         </ul>
