--- a/view/favorites.ejs
+++ b/view/favorites.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="nl">
     <%- include ('../view/partials/head') %>
-
     <body>
         <%- include ('../view/partials/header') %>
-
         <!-- het dier wordt weergegevn wat er bij past -->
         <main>
             <% if (favorites < 1) { %>
@@ -24,10 +22,12 @@
                         alt="photo of a pet"
                     />
                     <div>
-                        <h2><%= favorite.name %></h2>
-                        <h2><%= favorite.age %></h2>
-                        <h2><%= favorite.soort %></h2>
-                        <h2><%= favorite.trait %></h2>
+                        <ul class="infoList">
+                            <li><%= favorite.name %></li>
+                            <li><%= favorite.age %></li>
+                            <li><%= favorite.soort %></li>
+                            <li><%= favorite.trait %></li>
+                        </ul>
                         <form
                             class="favoriteForm"
                             method="post"
