--- a/view/result.ejs
+++ b/view/result.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="nl">
     <%- include ('../view/partials/head') %>
-
     <body>
         <%- include ('../view/partials/header') %>
-
         <!-- het dier wordt weergegevn wat er bij past -->
         <main>
             <div class="results">
@@ -17,10 +15,12 @@
                         alt="photo of a pet"
                     />
                     <div>
-                        <h2><%= pet.name %></h2>
-                        <h2><%= pet.age %></h2>
-                        <h2><%= pet.soort %></h2>
-                        <h2><%= pet.trait %></h2>
+                        <ul class="infoList">
+                            <li><%= pet.name %></li>
+                            <li><%= pet.age %></li>
+                            <li><%= pet.soort %></li>
+                            <li><%= pet.trait %></li>
+                        </ul>
                         <form
                             class="favoriteForm"
                             method="post"
@@ -50,7 +50,6 @@
                 <a href="http://localhost:4000/"><button>Retake!</button></a>
             </div>
         </main>
-
         <script src="/static/intersectionObv.js"></script>
     </body>
 </html>
