Afbeeldingen bijsnijden en omzetten naar webp

--- a/view/result.ejs
+++ b/view/result.ejs
@@ -13,6 +13,8 @@
                         data-src="<%= pet.images[0] %>"
                         loading="lazy"
                         alt="photo of a pet"
+                        width="300"
+                        height="300"
                     />
                     <div>
                         <ul class="infoList">
