--- a/sass/_result-list.scss
+++ b/sass/_result-list.scss
@@ -1,5 +1,6 @@
 .petPicture {
-    width: 60%;
+    width: 100%;
+    object-fit: contain;
 }
 
 .results {
@@ -23,6 +24,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100%;
     align-items: center;
+    gap: 2em;
 
     background-color: #ffffff;
 
@@ -47,11 +49,6 @@
 
     a:hover {
         background-color: var(--accent-color-hover);
-    }
-
-    img {
-        width: 300px;
-        height: 300px;
     }
 }
 
